--- a/index.html
+++ b/index.html
@@ -71,18 +71,21 @@
       <!-- Onboarding Section -->
       <div id="onboarding" class="onboarding-container">
         <div id="onboarding-step-1" class="onboarding-step active">
+          <img src="logo.png" width="310" height="175" alt="Do Re Mi Logo" class="logo">
           <h2>Welcome to Do Re Mi!</h2>
           <p>We connect creators from all industries to collaborate, share, and grow.</p>
           <button id="next-step-1">Next</button>
         </div>
   
         <div id="onboarding-step-2" class="onboarding-step">
+          <img src="logo.png" width="310" height="175" alt="Do Re Mi Logo" class="logo">
           <h2>Explore Features</h2>
           <p>Use our collaboration hub, explore creative tools, and showcase your work.</p>
           <button id="next-step-2">Next</button>
         </div>
   
         <div id="onboarding-step-3" class="onboarding-step">
+          <img src="logo.png" width="310" height="175" alt="Do Re Mi Logo" class="logo">
           <h2>Join Us</h2>
           <p>Ready to start collaborating? Sign up now or login to your existing account.</p>
           <button id="sign-up">Sign Up</button>
@@ -93,7 +96,7 @@
 
     <!-- Login Form -->
     <form id="login-form" class="form active" aria-labelledby="login-heading">
-      <img src="logo.png" width="300" height="175" alt="Do Re Mi Logo" class="logo">
+      <img src="logo.png" width="310" height="175" alt="Do Re Mi Logo" class="logo">
       <h2 id="login-heading">Login</h2>
       <div class="form-group">
         <label for="login-email">Email</label>
@@ -112,7 +115,7 @@
 
     <!-- Registration Form -->
     <form id="register-form" class="form" aria-labelledby="register-heading">
-      <img src="logo.png" width="300" height="175" alt="Do Re Mi Logo" class="logo">
+      <img src="logo.png" width="310" height="175" alt="Do Re Mi Logo" class="logo">
       <h2 id="register-heading">Register</h2>
       <div class="form-group">
         <label for="register-name">Full Name</label>
@@ -152,7 +155,7 @@
   </main>
 
   <footer>
-    <p>&copy; 2025 Do Re Mi App. All rights reserved.</p>
+    <!--<p>&copy; 2025 Do Re Mi App. All rights reserved.</p>-->
   </footer>
 
   <script src="script.js"></script>
