--- a/entertainmentHub.html
+++ b/entertainmentHub.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Do Re Mi Profile Dashboard</title>
-    <link rel="stylesheet" href="musicDashboard.css">
+    <link rel="stylesheet" href="entertainmentHub.css">
 </head>
 <body>
     <div class="dashboard">
@@ -29,8 +29,10 @@
 
         <!-- Bio Section -->
         <section class="bio-section">
-            <h2>John Doe</h2> <!-- Placeholder name -->
-            <p>John is a passionate music producer with a keen ear for new talent. He has worked with top artists in various genres, blending his technical skills with his love for creativity. He's constantly exploring new sounds and pushing the boundaries of music production.</p>
+            <h2>Joe Scroller</h2> <!-- Placeholder name -->
+            <p>Joe is a seamless browsing innovator, crafting an infinite scroll experience that keeps content flowing effortlessly. With a passion for smooth user interactions, he ensures every scroll feels natural and engaging. Focused on dynamic content loading, Joe brings endless discovery to every page.
+
+</p>
             <div class="stats">
                 <span>Followers: 1500</span>
                 <span>Following: 800</span>
@@ -58,7 +60,7 @@
         <section class="scroll-feed" id="scrollFeed"></section>
     </div>
 
-    <script src="musicDashboard.js"></script>
+    <script src="entertainmentHub.js"></script>
 </body>
 </html>
 
