--- a/daw.html
+++ b/daw.html
@@ -105,6 +105,10 @@
             <div class="master-track">
                 <h3>Master Volume</h3>
                 <input type="range" class="fader" min="0" max="100" value="75" aria-label="Master volume slider">
+                <div class="user-controls">
+                    <a href="musicDashboard.html" class="daw-button">Profile</a>
+                    <a href="index.html" class="daw-button">Logout</a>
+                </div>
             </div>
         </section>
     </main>
