--- a/musicDashboard.html
+++ b/musicDashboard.html
@@ -46,13 +46,18 @@
 
         <!-- Grid Section -->
 <section class="grid-section">
-    <div class="grid-item">Create & Collaborate</div>
+    <div class="grid-item">
+        <a href="daw.html" class="cyberpunk-btn">DAW</a>
+    </div>
     <div class="grid-item">Promote & Distribute</div>
     <div class="grid-item">Perform & Showcase</div>
     <div class="grid-item">Networking & Community</div>
     <div class="grid-item">Learn & Grow</div>
-    <div class="grid-item">Marketplace</div>
+    <div class="grid-item">
+        <a href="entertainhub.html" class="cyberpunk-btn">MARKETPLCE</a>
+    </div>
 </section>
+
 
         <!-- Scroll Feed Section -->
         <section class="scroll-feed" id="scrollFeed"></section>
