--- a/cineframe.html
+++ b/cineframe.html
@@ -47,6 +47,11 @@
         <div class="bottom-panel">
             <h2>Coming Soon</h2>
         </div>
+        <!-- Back to Profile Button -->
+        <div class="grid-item">
+    <a href="videophotoDashboard.html" class="video-button">🎥 Back to Profile</a>
+</div>
+
     </div>
 
     <script src="cineframe.js"></script>
