--- a/videophotoDashboard.html
+++ b/videophotoDashboard.html
@@ -47,12 +47,17 @@
 
         <!-- Grid Section -->
 <section class="grid-section">
-    <div class="grid-item">Create & Collaborate</div>
+    <div class="grid-item">
+        <a href="cineframe.html" class="photo-button">CineFrame 🎥</a>
+    </div>
+    
     <div class="grid-item">Promote & Distribute</div>
     <div class="grid-item">Perform & Showcase</div>
     <div class="grid-item">Networking & Community</div>
     <div class="grid-item">Learn & Grow</div>
-    <div class="grid-item">Marketplace</div>
+    <div class="grid-item">
+        <a href="entertainhub.html" class="cyberpunk-button">Marketplace</a>
+    </div>
 </section>
 
         <!-- Scroll Feed Section -->
