--- a/entertainmentHub.html
+++ b/entertainmentHub.html
@@ -53,7 +53,9 @@
     <div class="grid-item">Perform & Showcase</div>
     <div class="grid-item">Networking & Community</div>
     <div class="grid-item">Learn & Grow</div>
-    <div class="grid-item">Marketplace</div>
+    <div class="grid-item">
+        <a href="entertainhub.html" class="cyberpunk-button">Marketplace</a>
+    </div>
 </section>
 
         <!-- Scroll Feed Section -->
