--- a/weddingDashboard.html
+++ b/weddingDashboard.html
@@ -49,12 +49,19 @@
 
         <!-- Grid Section -->
 <section class="grid-section">
-    <div class="grid-item">Create & Collaborate</div>
+    <!-- Wedding Studio Button -->
+    <div class="grid-item">
+    <a href="weddingstudio.html" class="wedding-button">💍 Wedding Studio</a>
+    </div>
+
     <div class="grid-item">Promote & Distribute</div>
     <div class="grid-item">Perform & Showcase</div>
     <div class="grid-item">Networking & Community</div>
     <div class="grid-item">Learn & Grow</div>
-    <div class="grid-item">Marketplace</div>
+    <div class="grid-item">
+        <a href="entertainhub.html" class="cyberpunk-button">Marketplace</a>
+    </div>
+    
 </section>
 
         <!-- Scroll Feed Section -->
